css/main.css
/* ... */
.background__image {
  background-image: url("");
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-size: cover; /* <------ */
}

/* Safari, Chrome and Opera > 12.1 */
@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.container__master {
  display: flex;
  flex-wrap: wrap;
  align-content: stretch;
  height: 100vh;
  width: 100vw;
}

.flex-container {
  display: flex;
  flex-basis: 100%;
}

.row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  flex-flow: row wrap;
}

.col {
  display: flex;
  flex-direction: column;
  flex-flow: column;

  align-items: center;
  justify-content: center;
}

.flex-container.flex-center-bottom {
  top: auto;
  bottom: 0;
  margin-bottom: 0;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
}

.absolute-center {
  position: absolute;
  top: 18vh;
  left: 50vw;
  /* bring your own prefixes */
  transform: translate(-50%, -50%);
}
.search {
  border-radius: 0.5em;
  padding-left: 0.4em;
  padding-right: 1.2em;
  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua",
    Georgia, serif;
  width: 23vw;
  height: 5vh;
  margin-left: auto;
  margin-right: auto;
}

.search:focus {
  outline: none;
}

.submit {
  position: absolute;
  height: 2em;
  width: 2em;
  z-index: 1;
  right: 0.5em;
  top: 0.7em;
}

button,
input {
  font-size: 2em;
}

.settings__icon--active {
  transition: 0.2s;
  -webkit-filter: grayscale(0) !important;
  filter: grayscale(0) !important;
}

.settings__weather__icon {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 7em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.settings__freeze__icon {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 9.2em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.settings__calendar__icon {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 11.4em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.settings__recent-history__icon {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 13.6em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.settings__tray__icon {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 18em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.settings__topsites__icon {
  position: absolute;
  width: 2em;
  height: 2em;
  left: 0.2em;
  top: 15.8em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.bg-picker {
  position: absolute;
  width: 2em;
  height: 2em;
  top: 2em;
  left: 0.5em;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.topsites-container {
  display: flex;
  margin-top: 45vh;
  grid-row: 2;
  width: 30rem;
  margin-left: 1em;
  padding-left: 0.5em;
  padding-bottom: 1em;
  z-index: 1000;
}

.tsites-container {
  display: flex;
  margin-top: 30vh;
  grid-row: 1;
  width: auto;

  margin-left: 1em;

  padding-left: 0.5em;
  padding-bottom: 1em;
  z-index: 1000;
}

.topsites-box:hover:before {
  content: attr(data-title) "\A\A"attr(data-link);
  white-space: pre-line;

  flex-grow: 1;

  flex-wrap: wrap;
  padding: 0.7em 0.7em 0.7em 0.7em;

  margin-left: -2em;
  font-size: 1.3em;
  width: 100vw;
  margin-top: 4.2em;
  height: max-content;

  background: black;
  color: white;
  border: 2px solid white;

  border-radius: 1em;

  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 0.5s;

  z-index: -1;
}

.topsites-box:hover::after {
  content: "";
  position: absolute;
  top: 0;
  left: 50%;
  width: 0;
  height: 0;
  border: 20px solid transparent;
  border-bottom-color: black;

  border-left: 3px solid white;
  border-top: 0;
  margin-left: -10px;
  margin-top: 4.4em;

  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 0.5s;
}

.tsites-box:hover {
  opacity: .7;
}

.topsites-box {
  
  background: rgb(255, 255, 255, 0.85);
  margin-right: 1.3em;
  margin-top: 1.3em;
  border-radius: 3em;

  flex-direction: row;
  display: flex;

  height: 72px;
  width: 72px;
  opacity: 1;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 1s;

  transform: translateZ(0);
}

.topsites-box::before {
  display: block;
  content: " ";
  background-image: url("../icons/history.png");
  background-size: 28px 28px;
  border-radius: 3em;
  height: 28px;
  width: 28px;
  z-index: 10;

  transform: translateZ(0);
}

.tsites-box__top {
  position: relative;
  display: block;
  margin-right: -2em;
  content: " ";
  background-image: url("../icons/heart.png");
  background-size: 36px 36px;
  border-radius: 1em;
  height: 36px;
  width: 36px;
  z-index: 100;

  -webkit-animation: fadein .5s; /* Safari, Chrome and Opera > 12.1 */
  animation: fadein .5s;

  }


.topsites-box > img {
  position: absolute;
  width: 72px;
  height: 72px;
  border-radius: 3em;
  opacity: 1;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 1s;
  box-shadow: -4px -4px 0 #000, 4px -4px 0 #000, -4px 4px 0 #000, 3px 3px 0 #000;

  transform: translateZ(0);
}
/* ... */

